--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_launch_vendor
-	previous = 
-	base = fc00070
+	previous = fc00070
+	base = c5e7f56
 	trim = 
 	trimbase = 
