--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_launch_vendor
-	previous = 
-	base = f09a249
+	previous = f09a249
+	base = 1c8e8ae
 	trim = 
 	trimbase = 
