--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_launch_vendor
-	previous = 
-	base = bfde59c
+	previous = bfde59c
+	base = 6f37060
 	trim = 
 	trimbase = 
