--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/gz_launch_vendor
-	previous = 
-	base = f457230
+	previous = f457230
+	base = 5cde469
 	trim = 
 	trimbase = 
