--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_launch_vendor
-	previous = 
-	base = b037a22
+	previous = b037a22
+	base = ac9f98a
 	trim = 
 	trimbase = 
