--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_launch_vendor
-	previous = 
-	base = d461b6c
+	previous = d461b6c
+	base = de366b0
 	trim = 
 	trimbase = 
