--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_launch_vendor
-	previous = 
-	base = 1d308be
+	previous = 1d308be
+	base = e5250e2
 	trim = 
 	trimbase = 
