--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/gz_launch_vendor
-	previous = 
-	base = 439f1ec
+	previous = 439f1ec
+	base = 0248fef
 	trim = 
 	trimbase = 
