--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/gz_launch_vendor
-	previous = 
-	base = 63ebf93
+	previous = 63ebf93
+	base = f84ea36
 	trim = 
 	trimbase = 
