--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/gz_launch_vendor
-	previous = 
-	base = 9a750c1
+	previous = 9a750c1
+	base = a967b7b
 	trim = 
 	trimbase = 
