--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1-1": ["Mon Jul 15 2024", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"]}
+{"0.2.0-1": ["Mon Sep 30 2024", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"], "0.1.1-1": ["Mon Jul 15 2024", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"]}
