--- a/package.xml
+++ b/package.xml
@@ -10,9 +10,9 @@
     To avoid any confusion with the version of the vendor package, the major
     version here will always be 0.
   -->
-  <version>0.0.4</version>
+  <version>0.0.5</version>
   <description>
-    Vendor package for: gz-launch7 7.1.0
+    Vendor package for: gz-launch7 7.1.1
 
     Gazebo Launch : Run and manage programs and plugins
   </description>
@@ -24,6 +24,7 @@
   <buildtool_depend>ament_cmake_test</buildtool_depend>
   <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
 
+  <buildtool_depend>cmake</buildtool_depend>
   <build_depend>binutils</build_depend>
   <build_depend>libgflags-dev</build_depend>
   <build_depend>libwebsockets-dev</build_depend>
