--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.4-1": ["Mon Jul 15 2024", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"]}
+{"0.0.5-1": ["Wed Feb 19 2025", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"], "0.0.4-1": ["Mon Jul 15 2024", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"]}
