--- a/package.xml
+++ b/package.xml
@@ -10,9 +10,9 @@
     To avoid any confusion with the version of the vendor package, the major
     version here will always be 0.
   -->
-  <version>0.3.1</version>
+  <version>0.2.2</version>
   <description>
-    Vendor package for: gz-launch 9.0.0
+    Vendor package for: gz-launch8 8.0.2
 
     Gazebo Launch : Run and manage programs and plugins
   </description>
@@ -53,7 +53,7 @@
   <depend>gz_transport_vendor</depend>
 
   <!-- Depend on the package we are vendoring to allow building it from source -->
-  <depend condition="$GZ_BUILD_FROM_SOURCE != ''">gz-launch</depend>
+  <depend condition="$GZ_BUILD_FROM_SOURCE != ''">gz-launch8</depend>
 
   <test_depend>ament_cmake_copyright</test_depend>
   <test_depend>ament_cmake_lint_cmake</test_depend>
